--- a/src/peakrdl_python/templates/addrmap_field.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_field.py.jinja
@@ -42,14 +42,14 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
 
     {%- if 'encode' in node.list_properties() %}
     @property
-    def enum_cls(self) -> EnumMeta:
+    def enum_cls(self) -> type[{{enumcls_name}}]:
         """
         The enumeration class for this field
         """
         return self.__enum_cls
 
         {% if node.is_sw_readable %}
-    def decode_read_value(self, value: int) -> {{enumcls_name}}:
+    def decode_read_value(self, value: int) -> {{enumcls_name}}:  #type: ignore[override]
         """
         extracts the field value from a register value, by applying the bit
         mask and shift needed and conversion to the enum associated with the
@@ -70,7 +70,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
 
         return self.enum_cls(field_value)
 
-    {% if asyncoutput %}async {% endif %}def read(self) -> {{enumcls_name}}:
+    {% if asyncoutput %}async {% endif %}def read(self) -> {{enumcls_name}}: #type: ignore[override]
         """
         read the register and then perform the necessary actions, to report the
         value as the enumeration including:
@@ -103,9 +103,9 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
         {% endif %}
 
     @property
-    def default(self) -> Optional[{{enumcls_name}}]:
+    def default(self) -> Optional[{{enumcls_name}}]:  #type: ignore[override]
         """
-        The default value of the field
+        The default enumerated value of the field
 
         This returns None:
         - if the field is not reset.
