--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -96,7 +96,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         """
         reg_value = 0
         {%- for child_node in node.fields() %}
-        reg_value |= self.{{safe_node_name(child_node)}}.encode_write_value({{safe_node_name(child_node)}})
+        reg_value &= self.{{safe_node_name(child_node)}}.inverse_bitmask
+        reg_value |= self.{{safe_node_name(child_node)}}._encode_write_value({{safe_node_name(child_node)}})
         {% endfor %}
 
         {% if asyncoutput %}await {% endif %}self.write(reg_value)
