--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -61,7 +61,6 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         # build the field attributes
         {% for child_node in get_reg_fields(node, hide_node_func) %}
         self.__{{child_node.inst_name}}:{{get_fully_qualified_type_name(child_node)}}_cls = {{get_fully_qualified_type_name(child_node)}}_cls(
-            {% if 'encode' in child_node.list_properties() %}field_type={{ get_fully_qualified_enum_type(child_node.get_property('encode'), top_node.parent, child_node, hide_node_func) + '_enumcls' }},{% endif %}
             parent_register=self,
             size_props=FieldSizeProps(
                 width={{child_node.width}},
@@ -73,7 +72,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
                 default={{get_field_default_value(child_node)}},
                 is_volatile={{child_node.is_hw_writable}}),
             logger_handle=logger_handle+'.{{child_node.inst_name}}',
-            inst_name='{{child_node.inst_name}}')
+            inst_name='{{child_node.inst_name}}',
+            field_type={% if 'encode' in child_node.list_properties() %}{{ get_fully_qualified_enum_type(child_node.get_property('encode'), top_node.parent, child_node, hide_node_func) + '_enumcls' }}{% else %}int{% endif %})
         {%- endfor %}
 
     @property
