--- a/src/peakrdl_python/templates/addrmap_simulation_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_simulation_tb.py.jinja
@@ -39,6 +39,7 @@ from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}sim_lib.field i
 
 from ._{{top_node.inst_name}}_sim_test_base import {{top_node.inst_name}}_SimTestCase, {{top_node.inst_name}}_SimTestCase_BlockAccess
 from ._{{top_node.inst_name}}_sim_test_base import __name__ as base_name
+from ._{{top_node.inst_name}}_test_base import random_enum_reg_value
 
 {% if not legacy_enum_type %}
 from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import SystemRDLEnum
@@ -134,7 +135,7 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # typ
             # update the register value via the backdoor in the simulator
 
             {%- if 'encode' in node.list_properties() %}
-            random_field_value = cast({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, random.choice(list(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)))
+            random_field_value = random_enum_reg_value(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)
             random_value = (random.randrange(0, {{get_reg_max_value_hex_string(node.parent)}}+1) & {{get_field_inv_bitmask_hex_string(node)}}) | ({% if node.msb == node.high %}random_field_value.value{% else %}self._reverse_bits(value=random_field_value.value, number_bits={{node.width}}){% endif %} << {{node.low}})
             {% else %}
             random_value = random.randrange(0, {{get_reg_max_value_hex_string(node.parent)}}+1)
@@ -148,7 +149,7 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # typ
             # update the field value via the backdoor in the simulator
             previous_register_value = random_value
             {%- if 'encode' in node.list_properties() %}
-            random_field_value = cast({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, random.choice(list(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)))
+            random_field_value = random_enum_reg_value(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)
             sim_field.value = random_field_value.value
             self.assertEqual(sim_register.value, (previous_register_value & {{get_field_inv_bitmask_hex_string(node)}}) | ({% if node.msb == node.high %}random_field_value.value{% else %}self._reverse_bits(value=random_field_value.value, number_bits={{node.width}}){% endif %} << {{node.low}}))
             {% else %}
@@ -159,7 +160,7 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # typ
             self.assertEqual({% if asyncoutput %}await {%endif %}self.dut.{{'.'.join(get_python_path_segments(node))}}.read(), random_field_value)
             # hook up the call backs to check they work correctly
             {%- if 'encode' in node.list_properties() %}
-            random_field_value = cast({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, random.choice(list(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)))
+            random_field_value = random_enum_reg_value(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)
             random_value = (random.randrange(0, {{get_reg_max_value_hex_string(node.parent)}}+1) & {{get_field_inv_bitmask_hex_string(node)}}) | ({% if node.msb == node.high %}random_field_value.value{% else %}self._reverse_bits(value=random_field_value.value, number_bits={{node.width}}){% endif %} << {{node.low}})
             {% else %}
             random_value = random.randrange(0, {{get_reg_max_value_hex_string(node.parent)}}+1)
@@ -192,7 +193,7 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # typ
             sim_field.read_callback = None
             sim_field.write_callback = None
             {%- if 'encode' in node.list_properties() %}
-            random_field_value = cast({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, random.choice(list(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)))
+            random_field_value = random_enum_reg_value(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)
             random_value = (random.randrange(0, {{get_reg_max_value_hex_string(node.parent)}}+1) & {{get_field_inv_bitmask_hex_string(node)}}) | ({% if node.msb == node.high %}random_field_value.value{% else %}self._reverse_bits(value=random_field_value.value, number_bits={{node.width}}){% endif %} << {{node.low}})
             {% else %}
             random_value = random.randrange(0, {{get_reg_max_value_hex_string(node.parent)}}+1)
@@ -221,7 +222,7 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # typ
             inital_reg_random_value = 0
             {% endif %}
             {%- if 'encode' in node.list_properties() %}
-            random_field_value = cast({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, random.choice(list(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)))
+            random_field_value = random_enum_reg_value(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)
             {% else %}
             random_field_value = random.randrange(0, {{get_field_max_value_hex_string(node)}}+1)
             {% endif %}
@@ -242,7 +243,7 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # typ
             sim_field.read_callback = None
             sim_field.write_callback = field_write_callback
             {%- if 'encode' in node.list_properties() %}
-            random_field_value = cast({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, random.choice(list(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)))
+            random_field_value = random_enum_reg_value(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)
             {% else %}
             random_field_value = random.randrange(0, {{get_field_max_value_hex_string(node)}}+1)
             {% endif %}
@@ -267,7 +268,7 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_SimTestCase): # typ
             sim_register.write_callback = None
             sim_field.write_callback = None
             {%- if 'encode' in node.list_properties() %}
-            random_field_value = cast({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, random.choice(list(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)))
+            random_field_value = random_enum_reg_value(self.dut.{{'.'.join(get_python_path_segments(node))}}.enum_cls)
             {% else %}
             random_field_value = random.randrange(0, {{get_field_max_value_hex_string(node)}}+1)
             {% endif %}
