--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -20,6 +20,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 {% from 'reg_definitions.py.jinja' import child_register_getter with context %}
 {% from 'addrmap_udp_property.py.jinja' import udp_property with context %}
 {% from 'addrmap_universal_property.py.jinja' import universal_properties with context %}
+{% from 'addrmap_system_rdl_name_mapping.py.jinja' import get_child_by_system_rdl_name with context %}
+{% from 'addrmap_system_rdl_name_mapping.py.jinja' import systemrdl_python_child_name_map with context %}
 
 {%- macro memory_class(node) %}
     {%- if node.is_sw_readable and node.is_sw_writable %}
@@ -76,22 +78,9 @@ class {{get_fully_qualified_type_name(node)}}_cls(Memory{% if asyncoutput %}Asyn
 
     {{ child_register_getter(node) }}
 
-    @property
-    def systemrdl_python_child_name_map(self) -> dict[str, str]:
-        """
-        In some cases systemRDL names need to be converted make them python safe, this dictionary
-        is used to map the original systemRDL names to the names of the python attributes of this
-        class
+    {{ systemrdl_python_child_name_map(node) }}
 
-        Returns: dictionary whose key is the systemRDL names and value it the property name
-        """
-        return {
-            {%- for child_node in node.children(unroll=False) -%}
-            {%- if not hide_node_func(child_node) %}
-            '{{child_node.inst_name}}':'{{safe_node_name(child_node)}}',
-            {%- endif %}
-            {%- endfor %}
-            }
+    {{ get_child_by_system_rdl_name(node) }}
 
     {{ udp_property(node) }}
 
