Add `NoReturn` which was missing

--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -31,6 +31,7 @@ from typing import Type
 from typing import overload
 from typing import Literal
 from typing import Any
+from typing import NoReturn
 {% if asyncoutput -%}
 from typing import AsyncGenerator
 {% else %}
