--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -205,30 +205,9 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
         {%- endif %}
     {% endfor %}
 
-    @property
-    def systemrdl_python_child_name_map(self) -> dict[str, str]:
-        """
-        In some cases systemRDL names need to be converted make them python safe, this dictionary
-        is used to map the original systemRDL names to the names of the python attributes of this
-        class
+    {{ systemrdl_python_child_name_map(node) }}
 
-        Returns: dictionary whose key is the systemRDL names and value it the property name
-        """
-        return {
-            {%- for child_node in node.children(unroll=False) -%}
-                {%- if not hide_node_func(child_node) %}
-                    {%- if isinstance(child_node, systemrdlRegNode) -%}
-            '{{child_node.inst_name}}':'{{safe_node_name(child_node)}}',
-                    {%- elif isinstance(child_node, systemrdlRegfileNode) -%}
-            '{{child_node.inst_name}}':'{{safe_node_name(child_node)}}',
-                    {%- elif isinstance(child_node, systemrdlSignalNode) %}
-            # doing nothing with signal node: {{child_node.inst_name}}
-                    {% else %}
-            {{ raise_template_error('unexpected type') }}
-                    {%- endif %}
-                {%- endif %}
-            {%- endfor %}
-            }
+    {{ get_child_by_system_rdl_name(node) }}
 
     {{ udp_property(node) }}
 
