--- a/src/peakrdl_python/templates/addrmap_system_rdl_name_mapping.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_system_rdl_name_mapping.py.jinja
@@ -25,7 +25,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         raise KeyError('This node has no children')
     {% elif visible_nonsignal_node(node) == 1 %}
         {%- for child_node in node.children(unroll=False) -%}
-            {%- if isinstance(child_node, systemrdlFieldNode) %}
+            {%- if not isinstance(child_node, systemrdlSignalNode) %}
                 {% if not hide_node_func(child_node) %}
     def get_child_by_system_rdl_name(self, name: Any) -> {{get_fully_qualified_type_name(child_node)}}_cls:
         return super().get_child_by_system_rdl_name(name)
@@ -33,14 +33,18 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
             {%- endif %}
         {%- endfor %}
     {% else %}
+    # nodes:{{ visible_nonsignal_node(node) }}
         {%- for child_node in node.children(unroll=False) -%}
-            {%- if isinstance(child_node, systemrdlFieldNode) %}
+            {%- if not isinstance(child_node, systemrdlSignalNode) %}
                 {% if not hide_node_func(child_node) %}
     @overload
     def get_child_by_system_rdl_name(self, name: Literal["{{child_node.inst_name}}"]) -> {{get_fully_qualified_type_name(child_node)}}_cls: ...
                 {% endif %}
             {%- endif %}
         {%- endfor %}
+
+    @overload
+    def get_child_by_system_rdl_name(self, name: str) -> Union[{%- for child_node in node.children(unroll=False) -%}{%- if not isinstance(child_node, systemrdlSignalNode) %}{% if not hide_node_func(child_node) %}{{get_fully_qualified_type_name(child_node)}}_cls, {% endif %}{%- endif %}{%- endfor %}]: ...
 
     def get_child_by_system_rdl_name(self, name: Any) -> Any:
         return super().get_child_by_system_rdl_name(name)
