Add a test for the potential bug of a enumeration in a field when trying to build an inner addr_map

--- a/tests/testcases/addr_map.rdl
+++ b/tests/testcases/addr_map.rdl
@@ -1,8 +1,14 @@
 
+enum an_enum {
+		    value1 = 0;
+		    value2 = 1;
+		};
+
 reg regtype_a {
         default sw = rw;
         default hw = r;
-        field {} basicfield_a[31:0];
+        field {} basicfield_a[20:0];
+        field { encode = an_enum; fieldwidth=1; } basicfield_b;
     };
 
 addrmap child_addr_map_type_a {
