--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -29,7 +29,7 @@ import unittest
 from unittest.mock import patch, call
 {% endif %}
 import random
-from itertools import combinations
+from itertools import combinations, chain
 import math
 {% if legacy_enum_type %}
 from enum import IntEnum
@@ -765,69 +765,75 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
         {% if asyncoutput %}async {% endif %}def write_field_cominbinations(reg: Reg{% if asyncoutput %}Async{% endif %}ReadWrite, writable_fields:list[str]) -> None:
             with patch(base_name + '.write_addr_space') as write_callback_mock, \
                 patch(base_name + '.read_addr_space', return_value=0) as read_callback_mock:
-                for num_parm in range(1, len(writable_fields) + 1):
-                    for fields_to_write in combinations(writable_fields, num_parm):
-                        field_values: dict[str, Union[bool, {% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, int]] = {}
-                        expected_value = 0
-                        for field_str in fields_to_write:
-                            field = getattr(reg, field_str)
-                            if hasattr(field, 'enum_cls'):
-                                rand_enum_value = random_enum_reg_value(field.enum_cls)
-                                rand_field_value = rand_enum_value.value
-                                field_values[field_str] = rand_enum_value
-                            else:
-                                rand_field_value = random.randrange(0, field.max_value + 1)
-                                field_values[field_str] = rand_field_value
+                # fix for #196 (excessive test time) if the number of fields is greater than 4
+                # the combinations are reduced to only tests combinations of three plus the full
+                # set
+                if len(writable_fields) > 4:
+                    perms_iterator = chain(range(1,4), [len(writable_fields)])
+                else:
+                    perms_iterator = range(1, len(writable_fields) + 1)
+                for fields_to_write in chain.from_iterable((combinations(writable_fields, perms) for perms in perms_iterator)):
+                    field_values: dict[str, Union[bool, {% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, int]] = {}
+                    expected_value = 0
+                    for field_str in fields_to_write:
+                        field = getattr(reg, field_str)
+                        if hasattr(field, 'enum_cls'):
+                            rand_enum_value = random_enum_reg_value(field.enum_cls)
+                            rand_field_value = rand_enum_value.value
+                            field_values[field_str] = rand_enum_value
+                        else:
+                            rand_field_value = random.randrange(0, field.max_value + 1)
+                            field_values[field_str] = rand_field_value
 
-                            if field.msb == field.high:
-                                expected_value = ( expected_value & field.inverse_bitmask ) | (rand_field_value << field.low)
-                            elif field.msb == field.low:
-                                expected_value = ( expected_value & field.inverse_bitmask ) | (self._reverse_bits(value=rand_field_value, number_bits=field.width) << field.low)
-                            else:
-                                raise RuntimeError('invalid msb/lsb high/low combination')
+                        if field.msb == field.high:
+                            expected_value = ( expected_value & field.inverse_bitmask ) | (rand_field_value << field.low)
+                        elif field.msb == field.low:
+                            expected_value = ( expected_value & field.inverse_bitmask ) | (self._reverse_bits(value=rand_field_value, number_bits=field.width) << field.low)
+                        else:
+                            raise RuntimeError('invalid msb/lsb high/low combination')
 
-                        # read/write without verify
-                        read_callback_mock.return_value = 0
-                        {% if asyncoutput %}async {% endif %}with reg.single_read_modify_write(verify=False) as reg_session:
-                            for field_name, field_value in field_values.items():
-                                field = getattr(reg_session, field_name)
-                                {% if asyncoutput %}await {% endif %}field.write(field_value)
+                    # read/write without verify
+                    read_callback_mock.return_value = 0
+                    {% if asyncoutput %}async {% endif %}with reg.single_read_modify_write(verify=False) as reg_session:
+                        for field_name, field_value in field_values.items():
+                            field = getattr(reg_session, field_name)
+                            {% if asyncoutput %}await {% endif %}field.write(field_value)
 
-                        write_callback_mock.assert_called_once_with(
-                                addr=reg.address,
-                                width=reg.width,
-                                accesswidth=reg.accesswidth,
-                                data=expected_value)
-                        read_callback_mock.assert_called_once()
-                        write_callback_mock.reset_mock()
-                        read_callback_mock.reset_mock()
+                    write_callback_mock.assert_called_once_with(
+                            addr=reg.address,
+                            width=reg.width,
+                            accesswidth=reg.accesswidth,
+                            data=expected_value)
+                    read_callback_mock.assert_called_once()
+                    write_callback_mock.reset_mock()
+                    read_callback_mock.reset_mock()
 
-                        # read/write/verify pass
+                    # read/write/verify pass
+                    {% if asyncoutput %}async {% endif %}with reg.single_read_modify_write(verify=True) as reg_session:
+                        for field_name, field_value in field_values.items():
+                            field = getattr(reg_session, field_name)
+                            {% if asyncoutput %}await {% endif %}field.write(field_value)
+                        read_callback_mock.return_value = expected_value
+
+                    write_callback_mock.assert_called_once_with(
+                            addr=reg.address,
+                            width=reg.width,
+                            accesswidth=reg.accesswidth,
+                            data=expected_value)
+                    self.assertEqual(read_callback_mock.call_count, 2)
+                    write_callback_mock.reset_mock()
+                    read_callback_mock.reset_mock()
+
+                    # read/write/verify pass
+                    with self.assertRaises(RegisterWriteVerifyError) as context:
                         {% if asyncoutput %}async {% endif %}with reg.single_read_modify_write(verify=True) as reg_session:
                             for field_name, field_value in field_values.items():
                                 field = getattr(reg_session, field_name)
                                 {% if asyncoutput %}await {% endif %}field.write(field_value)
-                            read_callback_mock.return_value = expected_value
+                            read_callback_mock.return_value = expected_value ^ reg_session.max_value
 
-                        write_callback_mock.assert_called_once_with(
-                                addr=reg.address,
-                                width=reg.width,
-                                accesswidth=reg.accesswidth,
-                                data=expected_value)
-                        self.assertEqual(read_callback_mock.call_count, 2)
-                        write_callback_mock.reset_mock()
-                        read_callback_mock.reset_mock()
-
-                        # read/write/verify pass
-                        with self.assertRaises(RegisterWriteVerifyError) as context:
-                            {% if asyncoutput %}async {% endif %}with reg.single_read_modify_write(verify=True) as reg_session:
-                                for field_name, field_value in field_values.items():
-                                    field = getattr(reg_session, field_name)
-                                    {% if asyncoutput %}await {% endif %}field.write(field_value)
-                                read_callback_mock.return_value = expected_value ^ reg_session.max_value
-
-                        write_callback_mock.reset_mock()
-                        read_callback_mock.reset_mock()
+                    write_callback_mock.reset_mock()
+                    read_callback_mock.reset_mock()
 
         {% for node in owned_elements.registers -%}
         {% if node.has_sw_writable and node.has_sw_readable %}
@@ -851,36 +857,42 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
         {% if asyncoutput %}async {% endif %}def write_field_cominbinations(reg: Reg{% if asyncoutput %}Async{% endif %}ReadWrite, writable_fields:list[str]) -> None:
             with patch(base_name + '.write_addr_space') as write_callback_mock, \
                 patch(base_name + '.read_addr_space', return_value=0) as read_callback_mock:
-                for num_parm in range(1, len(writable_fields) + 1):
-                    for fields_to_write in combinations(writable_fields, num_parm):
-                        kwargs: dict[str, Union[bool, {% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, int]] = {}
-                        expected_value = 0
-                        for field_str in fields_to_write:
-                            field = getattr(reg, field_str)
-                            if hasattr(field, 'enum_cls'):
-                                rand_enum_value = random_enum_reg_value(field.enum_cls)
-                                rand_field_value = rand_enum_value.value
-                                kwargs[field_str] = rand_enum_value
-                            else:
-                                rand_field_value = random.randrange(0, field.max_value + 1)
-                                kwargs[field_str] = rand_field_value
+                # fix for #196 (excessive test time) if the number of fields is greater than 4
+                # the combinations are reduced to only tests combinations of three plus the full
+                # set
+                if len(writable_fields) > 4:
+                    perms_iterator = chain(range(1,4), [len(writable_fields)])
+                else:
+                    perms_iterator = range(1, len(writable_fields) + 1)
+                for fields_to_write in chain.from_iterable((combinations(writable_fields, perms) for perms in perms_iterator)):
+                    kwargs: dict[str, Union[bool, {% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}, int]] = {}
+                    expected_value = 0
+                    for field_str in fields_to_write:
+                        field = getattr(reg, field_str)
+                        if hasattr(field, 'enum_cls'):
+                            rand_enum_value = random_enum_reg_value(field.enum_cls)
+                            rand_field_value = rand_enum_value.value
+                            kwargs[field_str] = rand_enum_value
+                        else:
+                            rand_field_value = random.randrange(0, field.max_value + 1)
+                            kwargs[field_str] = rand_field_value
 
-                            if field.msb == field.high:
-                                expected_value = ( expected_value & field.inverse_bitmask ) | (rand_field_value << field.low)
-                            elif field.msb == field.low:
-                                expected_value = ( expected_value & field.inverse_bitmask ) | (self._reverse_bits(value=rand_field_value, number_bits=field.width) << field.low)
-                            else:
-                                raise RuntimeError('invalid msb/lsb high/low combination')
+                        if field.msb == field.high:
+                            expected_value = ( expected_value & field.inverse_bitmask ) | (rand_field_value << field.low)
+                        elif field.msb == field.low:
+                            expected_value = ( expected_value & field.inverse_bitmask ) | (self._reverse_bits(value=rand_field_value, number_bits=field.width) << field.low)
+                        else:
+                            raise RuntimeError('invalid msb/lsb high/low combination')
 
-                        {% if asyncoutput %}await {% endif %}reg.write_fields(**kwargs)
-                        write_callback_mock.assert_called_once_with(
-                                addr=reg.address,
-                                width=reg.width,
-                                accesswidth=reg.accesswidth,
-                                data=expected_value)
-                        read_callback_mock.assert_called_once()
-                        write_callback_mock.reset_mock()
-                        read_callback_mock.reset_mock()
+                    {% if asyncoutput %}await {% endif %}reg.write_fields(**kwargs)
+                    write_callback_mock.assert_called_once_with(
+                            addr=reg.address,
+                            width=reg.width,
+                            accesswidth=reg.accesswidth,
+                            data=expected_value)
+                    read_callback_mock.assert_called_once()
+                    write_callback_mock.reset_mock()
+                    read_callback_mock.reset_mock()
 
 
         {% for node in owned_elements.registers -%}
