--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -852,9 +852,8 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
         """
         Walk the register map and check every register write_fields method
         """
-        rut:Reg{% if asyncoutput %}Async{% endif %}ReadWrite
         rand_enum_value:{% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}
-        {% if asyncoutput %}async {% endif %}def write_field_cominbinations(reg: Reg{% if asyncoutput %}Async{% endif %}ReadWrite, writable_fields:list[str]) -> None:
+        {% if asyncoutput %}async {% endif %}def write_field_combinations(reg: Reg{% if asyncoutput %}Async{% endif %}ReadWrite, writable_fields:list[str]) -> None:
             with patch(base_name + '.write_addr_space') as write_callback_mock, \
                 patch(base_name + '.read_addr_space', return_value=0) as read_callback_mock:
                 # fix for #196 (excessive test time) if the number of fields is greater than 4
@@ -900,17 +899,12 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
         with self.subTest(msg='register: {{'.'.join(node.get_path_segments())}}'):
             # test read_fields to register:
             # {{'.'.join(node.get_path_segments())}}
-
-
-            {% if node.has_sw_readable %}
-            rut = self.dut.{{'.'.join(get_python_path_segments(node))}} # type: ignore[union-attr,assignment]
-            if not isinstance(rut, Reg{% if asyncoutput %}Async{% endif %}ReadWrite):
-                raise TypeError('Failed to find read/write register')
-            {% if asyncoutput %}await {% endif %}write_field_cominbinations(reg=rut,
+            {% if node.has_sw_readable -%}
+            {% if asyncoutput %}await {% endif %}write_field_combinations(reg=self.dut.{{'.'.join(get_python_path_segments(node))}},
                                        writable_fields = [ {% for field in get_reg_writable_fields(node, hide_node_func) -%}
                                                            '{{ safe_node_name(field) }}' {%- if not loop.last -%},{%- endif %}
                                                            {% endfor -%} ])
-            {% else %}
+            {% else -%}
             kwargs = {} # type: ignore[var-annotated]
             expected_value = 0
             {% for field in get_reg_writable_fields(node, hide_node_func) %}
