--- a/tests/testcases/name_clash.rdl
+++ b/tests/testcases/name_clash.rdl
@@ -35,6 +35,9 @@ addrmap name_clash {
         field { fieldwidth=1; sw = w; } from = 1;
         field { fieldwidth=1; sw = r; } in = 1;
         field { fieldwidth=1; sw = rw; } yield = 1;
+        field { fieldwidth=1; sw = w; encode = direction; } finally;
+        field { fieldwidth=1; sw = r; encode = direction; } pass;
+        field { fieldwidth=1; sw = rw; encode = direction; } is;
     } gpio_field_rw;
 
     reg {
@@ -44,6 +47,7 @@ addrmap name_clash {
 
     reg {
         default sw = w;
+        field { fieldwidth=1; sw = w; encode = direction; } pass;
         field { fieldwidth=1; sw = w; } from = 1;
     } gpio_field_w;
 
